--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: JitanNoKiwami_production
-  username: JitanNoKiwami
-  password: <%= ENV['JITANNOKIWAMI_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  url: <%= ENV['DATABASE_URL'] %>
